--- a/JavaApplication1/nbproject/private/private.properties
+++ b/JavaApplication1/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\draw-\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+user.properties.file=C:\\Users\\Valentin\\AppData\\Roaming\\NetBeans\\11.3\\build.properties
